# link-c-sdk

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  config.h.in  hisiv300.cmake  readme.md  readme.txt  valgrind.supp
CMake/: Utilities.cmake  hisiv300.cmake  toolchain.cmake
demo/: CMakeLists.txt  cfg.c  cfg.h  collector.c  collector.h  connect_mqtt.c  connect_mqtt.h  dbg.c  dbg.h  dev_config.h  dev_core.c  dev_core.h  flag.c  flag.h  func_trace.c  ipc.conf  log2file.c  log2file.h  log2tcp.c  log2tcp.h  log_mqtt.c  log_mqtt.h  main.c  main.h  mymalloc.c  mymalloc.h  ota.c  ota.h  queue.h  readme.md  sim_dev.c  socket_logging.c  socket_logging.h  stream.c  stream.h  tags  test.c  testpic.c
demo/devices/: dev_core.c  dev_core.h  sim_dev.c
demo/log/: dbg.c  dbg.h  log2mqtt.c  log2mqtt.h  log2tcp.c  log2tcp.h
demo/material/: h265_aac_1_16000.ts  h265_aac_1_16000_h264.h264  h265_aac_1_16000_pcmu_8000.mulaw  h265_aac_1_16000_v.h265  ipch265.txt  readme.txt  testuid3_testdeviceid_1533107935_1533107996.ts
demo/ota/: md5.c  md5.h  ota.c  ota.h
demo/tools/: cfg.c  cfg.h  queue.c  queue.h  telnetd.c  telnetd.h
doc/: Device_SDK_Manual.md
libfastrtmp/: CMakeLists.txt
libfastrtmp/fastrtmp/: fastrtmp.c  fastrtmp.h
libfastrtmp/flv/: adts.c  adts.h  bytestream.c  bytestream.h  flv.c  flv.h  h264_decode.c  h264_decode.h
libfastrtmp/sample/: CMakeLists.txt  main.c
libfastrtmp/sample/devices/: aj_ipc.c  dev_core.c  dev_core.h  ipc_simulator.c
libfastrtmp/sample/devices/aj/include/: cmd_def.h  data_struct.h  dbg.h  dev_core.h  devsdk.h  function_list.h  media_cfg.h  platform_ambar_s2l.h  platform_ambar_s2lm.h  platform_ambar_s2lm2.h  platform_dm36x.h  platform_hi3516a.h  platform_hi3516cv300.h  platform_hi3518ev200.h  platform_hi35xx.h  platform_mstar.h  platform_x86.h  sdk_interface.h
libfastrtmp/sample/material/: dst.flv  flv-dump.data  play.ts  video.h264
libfastrtmp/tests/: CMakeLists.txt  testfastrtmp.c  testflv.c  testwss.c  unit_test.h
libfastrtmp/wss/: transport.c  transport.h
libghttp/: CMakeLists.txt  ghttp.c  ghttp.h  http_req.c  http_req.h  http_trans.c  http_trans.h  http_uri.c  http_uri.h  qupload.c  qupload.h  readme.txt  test.c  timeoutconn.c  timeoutconn.h  version.h
libmqtt/: CMakeLists.txt  control.c  control.h  control_internal.h  linking-emitter-api.c  linking-emitter-api.h  log.c  log.h  mqtt.c  mqtt.h  mqtt_internal.h  qnlinking_mqtt.c  qnlinking_mqtt.h  queue.c  queue.h
libmqtt/mosquitto/: mos_mqtt.c  mos_mqtt.h
libmqtt/test/: CMakeLists.txt  main.c  main.h
libmqtt/wolfmqtt/: mqttnet.c  mqttnet.h  wolfmqtt.c  wolfmqtt.h
libtsuploader/: CMakeLists.txt  adts.c  adts.h  base.h  fixjson.c  fixjson.h  httptools.c  httptools.h  kmp.c  kmp.h  localkey.h  log.c  log.h  mpegts.c  mpegts.h  picuploader.c  picuploader.h  queue.c  queue.h  resource.c  resource.h  security.c  security.h  segmentmgr.c  segmentmgr.h  servertime.c  servertime.h  sign.c  socket_logging.c  socket_logging.h  tsmux.c  tsmux.h  tsmuxuploader.c  tsmuxuploader.h  tsuploader.c  tsuploader.h  tsuploaderapi.c  tsuploaderapi.h  uploader.c  uploader.h  (+3 more)
libtsuploader/c-sdk/: CMakeLists.txt
libtsuploader/c-sdk/qiniu/: auth_mac.c  gettoken.go  http.c  http.h  io.c  io.h  token.txt
libtsuploader/cJSON/: cJSON.c
monster/: CMakeLists.txt  common.c  common.h  connect.c  connect.h  device.c  device.h
sample/: CMakeLists.txt  Makefile  README.txt  dbg.h  ipc.c  sample.c  sample_ver.h.in  sim_ipc.c
tests/: CMakeLists.txt  libghttp_test.c  libmqtt_test.c  libtsuploader_test.c  test.c  testpic.c  testseg.c
tests/functional/: CMakeLists.txt  test.c  testpic.c  testseg.c
tests/material/: ca.crt  h265_aac_1_16000_h264.h264  h265_aac_1_16000_pcma_16000.alaw
tests/unit/: CMakeLists.txt  CuTest.h  test_all.c  test_link_api.c  test_link_queue.c
