cmake_minimum_required (VERSION 2.8)
set( APPNAME tsuploader-app )
project( ${APPNAME} )
include_directories( ./src )
include_directories( ../libtsuploader/ )
link_directories( ${CMAKE_CURRENT_SOURCE_DIR}/../lib )
link_directories(${THIRD_LIB_PATH})
link_directories(${WOLFMQTT_LIBRARIES})
AUX_SOURCE_DIRECTORY( ./ DIR_SRCS)
ADD_EXECUTABLE( ${APPNAME} ${DIR_SRCS} )
target_link_libraries( ${APPNAME} tsuploader_STATIC ghttp_STATIC mqtt_STATIC wolfmqtt pthread m )
